# reformat-gherkin

./: .coveragerc  .flake8  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pyup.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  azure-pipelines.yml  pyproject.toml  reformat_gherkin.py  requirements-dev.txt  requirements.txt  setup.py
.azure-pipelines-templates/: job.yml  jobs.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  publish.yml  test.yml
main/: cli.py  core.py  errors.py  formatter.py  options.py  parser.py  report.py  utils.py
main/ast_node/: __init__.py  _base.py  background.py  comment.py  data_table.py  examples.py  feature.py  gherkin_document.py  location.py  scenario.py  scenario_outline.py  step.py  table_cell.py  table_row.py  tag.py
main/models/: background.py  comment.py  data_table.py  examples.py  feature.py  gherkin_document.py  location.py  scenario.py  scenario_outline.py  step.py  table_cell.py  table_row.py  tag.py
reformat_gherkin/: __main__.py  cli.py  config.py  core.py  errors.py  formatter.py  options.py  parser.py  report.py  utils.py
reformat_gherkin/ast_node/: __init__.py  _base.py  background.py  comment.py  data_table.py  doc_string.py  examples.py  feature.py  location.py  rule.py  scenario.py  scenario_outline.py  step.py  table_cell.py  table_row.py  tag.py  tag_group.py
scripts/: generate_test_data.py  lint.sh  prepare_gherkin_test_data.py  test.sh
tests/: conftest.py  helpers.py  test_ast_node.py  test_cli.py  test_config.py  test_core.py  test_formatter.py  test_package.py  test_parser.py  test_utils.py
tests/config_files/: invalid.yaml  valid.yaml
tests/data/expected/: empty_table.feature  full.feature  german.feature  login.feature
tests/data/invalid/: missing_step_keyword.feature
tests/data/valid/: empty_table.feature  full.feature  login.feature  login_no_equi.feature  search_wikipedia.feature
tests/data/valid/character_width/: expected_default.feature  input.feature
tests/data/valid/doc_string_escape/: expected_default.feature  input.feature
tests/data/valid/doc_string_with_spaces/: expected_default.feature  input.feature
tests/data/valid/full/: expected_default.feature  expected_left_aligned.feature  expected_multi_line_tags.feature  expected_right_aligned.feature  expected_single_line_tags.feature  expected_use_tabs.feature  input.feature
tests/data/valid/german/: expected_default.feature  expected_left_aligned.feature  expected_right_aligned.feature  input.feature
tests/data/valid/japanese/: expected_left_aligned.feature  expected_right_aligned.feature  input.feature
tests/data/valid/large_file/: expected_default.feature  input.feature
tests/data/valid/login/: input.feature
tests/data/valid/login_equi/: input.feature
tests/data/valid/no_given_step/: expected_left_aligned.feature  input.feature
tests/data/valid/search_wikipedia/: expected_default.feature
tests/data/valid/special_characters_in_table_cell/: expected_default.feature  input.feature
