[tool.poetry]
name = "reformat-gherkin"
version = "2.0.1"
description = "Formatter for Gherkin language"
readme = "README.md"
authors = ["Duc-Minh Phan <alephvn@gmail.com>"]
homepage = "https://github.com/ducminh-phan/reformat-gherkin"
license = "MIT"
packages = [
    {include = "reformat_gherkin"}
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.scripts]
reformat-gherkin = "reformat_gherkin.cli:main"

[tool.poetry.dependencies]
python = "^3.6"
gherkin-official = "4.1.3"
click = "^7.0"
attrs = "^20.2"
cattrs = "^1.1.0"
pyyaml = "^5.1"
wcwidth = "^0.1.7"

[tool.poetry.dev-dependencies]
pre-commit = "^1.14"
pytest = "^4.3"
coverage = "^4.5"
pytest-cov = "^2.6"
pytest-mock = "^1.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
