[tool.poetry]
name = "reformat-gherkin"
version = "2.1.1"
description = "Formatter for Gherkin language"
readme = "README.md"
authors = ["Duc-Minh Phan <alephvn@gmail.com>"]
homepage = "https://github.com/ducminh-phan/reformat-gherkin"
license = "MIT"
packages = [
    {include = "reformat_gherkin"}
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.scripts]
reformat-gherkin = "reformat_gherkin.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
gherkin-official = "4.1.3"
click = "^7.0"
attrs = "^20.2"
cattrs = "^1.1.0"
pyyaml = "^5.1"
wcwidth = "^0.1.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"
pytest = "^6.2.3"
coverage = "^5.5"
pytest-cov = "^2.11.1"
pytest-mock = "^3.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
