[tool.poetry]
name = "reformat-gherkin"
version = "3.0.1"
description = "Formatter for Gherkin language"
readme = "README.md"
authors = ["Duc-Minh Phan <alephvn@gmail.com>"]
homepage = "https://github.com/ducminh-phan/reformat-gherkin"
license = "MIT"
packages = [
    {include = "reformat_gherkin"}
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.scripts]
reformat-gherkin = "reformat_gherkin.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = ">=5.4"
attrs = ">=20.2"
cattrs = ">=1.1, <22.2"
click = ">=7"
gherkin-official = "24.0.0"
wcwidth = "^0.2.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest = "^7.1.2"
coverage = "^6.4.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
